--- a/Humraah/Humraah/Views/Account/RegisterStation.cshtml
+++ b/Humraah/Humraah/Views/Account/RegisterStation.cshtml
@@ -21,7 +21,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Locality, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("Type", "")
+            @Html.DropDownList("Locality", "")
         </div>
     </div>
 
