everything except ajax working

--- a/Humraaah/Humraaah/Views/Home/Contact.cshtml
+++ b/Humraaah/Humraaah/Views/Home/Contact.cshtml
@@ -2,16 +2,14 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Habib University<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    0312-9955060
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Kainat:</strong>   <a href="mailto:ka04051@st.habib.edu.pk">ka04051@st.habib.edu.pk</a><br />
+    <strong>Mudasir:</strong> <a href="mailto:ms03831@st.habib.edu.pk">ms03831@st.habib.edu.pk</a>
 </address>
