--- a/Humraaah/Humraaah/Content/bootstrap.css
+++ b/Humraaah/Humraaah/Content/bootstrap.css
@@ -6,11 +6,12 @@
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
+
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+    margin: 0;
 }
 article,
 aside,
@@ -239,6 +240,7 @@ th {
     page-break-after: avoid;
   }
   .navbar {
+     
     display: none;
   }
   .btn > .caret,
@@ -251,6 +253,7 @@ th {
   .table {
     border-collapse: collapse !important;
   }
+
   .table td,
   .table th {
     background-color: #fff !important;
@@ -1081,12 +1084,14 @@ html {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-family: "Calisto MT", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 20px;
   line-height: 1.42857143;
   color: #333;
-  background-color: #fff;
+  background-color: white;
+  padding-top: 100px;
 }
 input,
 button,
@@ -1095,6 +1100,7 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+
 }
 a {
   color: #337ab7;
@@ -3001,6 +3007,7 @@ select[multiple].input-lg {
   }
 }
 .btn {
+    color: red;
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -3013,7 +3020,6 @@ select[multiple].input-lg {
   -ms-touch-action: manipulation;
       touch-action: manipulation;
   cursor: pointer;
-  -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
@@ -3114,9 +3120,9 @@ fieldset[disabled] .btn-default.focus {
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+    color: white;
+    background-color: #800000;
+    border-color: #2e6da4;
 }
 .btn-primary:focus,
 .btn-primary.focus {
@@ -4179,12 +4185,15 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: left;
   }
 }
+
+/*works for drop down*/
 .navbar-collapse {
   padding-right: 15px;
   padding-left: 15px;
+  padding-bottom: 15px;
   overflow-x: visible;
   -webkit-overflow-scrolling: touch;
-  border-top: 1px solid transparent;
+  /*border-top: 1px solid transparent;*/
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
@@ -4214,9 +4223,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     padding-left: 0;
   }
 }
+/*works */
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
-  max-height: 340px;
+    max-height: 100%;
+    background-color: #800000;
 }
 @media (max-device-width: 480px) and (orientation: landscape) {
   .navbar-fixed-top .navbar-collapse,
@@ -4262,25 +4273,31 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     border-radius: 0;
   }
 }
+/*works*/
 .navbar-fixed-top {
-  top: 0;
-  border-width: 0 0 1px;
+    top: 0;
+    height: 100px;
+    border: 5px solid #e60000;
 }
+
 .navbar-fixed-bottom {
   bottom: 0;
   margin-bottom: 0;
   border-width: 1px 0 0;
 }
+/*works*/
 .navbar-brand {
+  font-family:'Monotype Corsiva';
   float: left;
-  height: 50px;
-  padding: 15px 15px;
-  font-size: 18px;
-  line-height: 20px;
+  height: 55px;
+  padding: 15px 50px 15px 0px;
+  font-size: 50px;
+  line-height: 50px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
-  text-decoration: none;
+  text-decoration: None;
+  color: white;
 }
 .navbar-brand > img {
   display: block;
@@ -4374,6 +4391,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
+  
 }
 @media (min-width: 768px) {
   .navbar-form .form-group {
@@ -4492,6 +4510,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-right: 0;
   }
 }
+
 .navbar-default {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
@@ -4503,6 +4522,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-brand:focus {
   color: #5e5e5e;
   background-color: transparent;
+  background-color: green;
 }
 .navbar-default .navbar-text {
   color: #777;
@@ -4588,43 +4608,54 @@ fieldset[disabled] .navbar-default .btn-link:hover,
 fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
+
 .navbar-inverse {
-  background-color: #222;
-  border-color: #080808;
+    background-color: #800000;
+    border-color: black;
 }
 .navbar-inverse .navbar-brand {
-  color: #9d9d9d;
+  color: white;
+
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
-  background-color: transparent;
+  color: black;
+  background-color:transparent;
+
 }
-.navbar-inverse .navbar-text {
-  color: #9d9d9d;
-}
-.navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d;
-}
+
+    .navbar-inverse .navbar-nav > li > a {
+        color: white;
+        font-size: 20px;
+        font-family: 'Comic Sans MS';
+        float: left;
+        height: 50px;
+        padding: 15px 15px 30px 30px;
+        line-height: 50px;
+        text-decoration: underline;
+      
+    }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  color: black;
   background-color: transparent;
 }
+
+
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #fff;
-  background-color: #080808;
+  background-color: green;
 }
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
 .navbar-inverse .navbar-nav > .disabled > a:focus {
   color: #444;
-  background-color: transparent;
+  background-color: green;
 }
 .navbar-inverse .navbar-toggle {
-  border-color: #333;
+  border-color: white;
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
@@ -4633,15 +4664,17 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #fff;
 }
+
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #101010;
+  border-color: white;
 }
+
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
   color: #fff;
-  background-color: #080808;
+  background-color: green;
 }
 @media (max-width: 767px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
@@ -6007,7 +6040,6 @@ button.close {
   white-space: normal;
   filter: alpha(opacity=0);
   opacity: 0;
-
   line-break: auto;
 }
 .tooltip.in {
