--- a/Humraaah/Humraaah/Views/Home/Index.cshtml
+++ b/Humraaah/Humraaah/Views/Home/Index.cshtml
@@ -1,18 +1,67 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body {
+        margin: 0;
+    }
 
-<div class="jumbotron" style="color:darkslategray;">
-    <h1 style="color:black;">Humraah</h1>
-    <p class="lead" style="color:black;">Hum or aap, Humraah!</p>
+    .icon-bar {
+                 position: absolute;
+            top: 70%;
+        width: 100%;
+        background-color: #555;
+        overflow: auto;
+    }
+
+        .icon-bar a {
+   
+            float: left;
+            width: 20%;
+            text-align: center;
+            padding: 12px 0;
+            transition: all 0.3s ease;
+            color: white;
+            font-size: 36px;
+        }
+
+            .icon-bar a:hover {
+                background-color: #000;
+            }
+
+    .active {
+        background-color: #4CAF50;
+    }
+</style>
+<body>
+
+    <div class="icon-bar">
+        <a class="active" href="#"><i class="fa fa-home"></i></a>
+        <a href="#"><i class="fa fa-search"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="#"><i class="fa fa-globe"></i></a>
+        <a href="#"><i class="fa fa-trash"></i></a>
+    </div>
+
+
+
+
+
+<body class="jumbotron" style="background-image: url('handshake.png') ;">
+
+    <p class="lead" style="padding-top: 10%;">Hum or aap, Humraah!</p>
     @{
-        if (!(User.Identity.IsAuthenticated)) { 
-            <p class="btn-block"> To book or register an ambulance, @Html.ActionLink("Register", "Register", "Account", null, new { @class = "btn btn-primary", @style = "color:Black" })</p>
-            <p class="btn-block"> Already have an account? @Html.ActionLink("Login", "Login", "Account", null, new { @class = "btn btn-primary", @style = "color:Black" })</p>
+        if (!(User.Identity.IsAuthenticated))
+        {
+            <p class="btn-block" style="padding-top: 50px;"> To book or register an ambulance, @Html.ActionLink("Register", "Register", "Account", null, new { @class = "btn btn-primary" })</p>
+            <p class="btn-block"> Already have an account? @Html.ActionLink("Login", "Login", "Account", null, new { @class = "btn btn-primary" })</p>
         }
     }
-            <p class="btn-block"> Looking for an Ambulance? @Html.ActionLink("Search", "Index", "Search", null, new { @class = "btn btn-primary", @style = "color:Black" })</p>
-</div>
+    <p class="btn-block"> Looking for an Ambulance? @Html.ActionLink("Search", "Index", "Search", null, new { @class = "btn btn-primary" })</p>
+</body>
 
 
-
+</html>
