--- a/Humraaah/Humraaah/Views/Search/AmbulanceDetails.cshtml
+++ b/Humraaah/Humraaah/Views/Search/AmbulanceDetails.cshtml
@@ -9,7 +9,7 @@
 </h2>
 
 <div class="card">
-    <img src="ambulance.jpg" alt="Ambulance" style="width:100%">
+    <img src="~/images/index.png" alt="Ambulance" style="width:100%">
 
     <h5>Plate: @Html.DisplayFor(model => model.Plate)</h5>
     <h5>Color: @Html.DisplayFor(model => model.Color)</h5>
