--- a/Humraaah/Humraaah/Views/Shared/_Layout.cshtml
+++ b/Humraaah/Humraaah/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/Site.css")
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
 
 </head>
 <body>
