--- a/Humraaah/Humraaah/Views/Bookings/Index.cshtml
+++ b/Humraaah/Humraaah/Views/Bookings/Index.cshtml
@@ -6,60 +6,83 @@
 
 <h2>Your Bookings</h2>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Ambulance.Driver.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Ambulance.Driver.Phone)
-        </th>
+@Ajax.ActionLink("All Bookings", // <-- Text to display
+                 "GetAll", // <-- Action Method Name
+                 "Bookings",
+                 new AjaxOptions
+                 {
+                     UpdateTargetId= "BookingsList", // <-- DOM element ID to update
+                     InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
+                     HttpMethod = "GET" // <-- HTTP method
+                 })
 
-        <th>
-            @Html.DisplayNameFor(model => model.Ambulance.Color)
-        </th>
+|
 
-        <th>
-            @Html.DisplayNameFor(model => model.Ambulance.Plate)
-        </th>
+@Ajax.ActionLink("Current Bookings", // <-- Text to display
+                 "Current", // <-- Action Method Name
+                 "Bookings",
+                 new AjaxOptions
+                 {
+                     UpdateTargetId= "BookingsList", // <-- DOM element ID to update
+                     InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
+                     HttpMethod = "GET" // <-- HTTP method
+                 })
 
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
 
-        <th>
-            @Html.DisplayNameFor(model => model.CurrentlyActive)
-        </th>
 
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ambulance.Driver.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ambulance.Driver.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ambulance.Color)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ambulance.Plate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-
-        <td>
-            @Html.DisplayFor(modelItem => item.CurrentlyActive)
-        </td>
-
-        <td>
-            @Html.ActionLink("End Booking", "Edit", new { id = item.idBooking }, new { @class = "btn btn primary" })
-        </td>
-    </tr>
+<!--
+    as
+@{
+    var str = new List<string>() { "yes", "no" };
+    ViewBag.lst = new SelectList(str);
 }
 
-</table>
+View only past bookings: @Html.DropDownList("bookingFilter", (IEnumerable<SelectListItem>)ViewBag.lst, "", new { id = "bookingFilter" })
+<input type="submit" id="filter" value="Filter" />
+
+
+
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $("#filter").click(function () {
+            var bookingFilter = $("#bookingFilter").val();
+            var SetData = $("#bksList");
+            SetData.html("");
+            //var btn = "<tr><td>" + "@@" + "Html.ActionLink(\"Book\", \"Book\", new {" + "@@" + "class =" + "\"btn btn-primary\"})</td><tr/>";
+            //SetData.append(btn);
+            $.ajax({
+                type: "post",
+                url: "/Booking/GetBookings?bookingFilter=" + bookingFilter,
+                contentType: "html",
+                success: function (result) {
+                    if (result.length == 0) {
+                        SetData.append('<tr style="color:red"><td colspan="3">No Past Bookings</td></tr>')
+                    }
+                    else {
+                        $.each(result, function (index, value) {
+                            var Data = "<tr>" +
+                                "<td>" + value.Driver.Name + "</td>" +
+                                "<td>" + value.Driver.Phone + "</td>" +
+                                "<td>" + value.Ambulance.Color + "</td>" +
+                                "<td>" + value.Ambulance.Plate + "</td>" +
+                                "<td>" + value.Date + "</td>" +
+                                "<td>" + value.CurrentlyActive + "</td>" +
+                                "</tr>";
+                            SetData.append(Data);
+                        });
+                    }
+                }
+            });
+        });
+    });
+</script>
+-->
+
+
+<div id="BookingsList"></div>
+
+@section scripts{
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.js")
+}
