--- a/Humraaah/Humraaah/Views/Bookings/Index.cshtml
+++ b/Humraaah/Humraaah/Views/Bookings/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Humraaah.Models.Booking>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Bookings";
 }
 
 <h2>Your Bookings</h2>
