--- a/Humraaah/Humraaah/Views/Ambulances/Details.cshtml
+++ b/Humraaah/Humraaah/Views/Ambulances/Details.cshtml
@@ -60,7 +60,8 @@
 
     </dl>
 </div>
-<p>
+<p style="position: absolute;
+  right: 100px;">
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
