--- a/Humraaah/Humraaah/Content/Site.css
+++ b/Humraaah/Humraaah/Content/Site.css
@@ -3,7 +3,8 @@
     padding-bottom: 20px;
 }
 
-/* Set padding to keep content from hitting the edges */
+/* Set p
+    ing to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
