--- a/Humraaah/Humraaah/Content/bootstrap.css
+++ b/Humraaah/Humraaah/Content/bootstrap.css
@@ -13,6 +13,7 @@ html {
 
 body {
     margin: 0;
+
 }
 
 article,
@@ -221,11 +222,15 @@ optgroup {
 table {
     border-spacing: 0;
     border-collapse: collapse;
+
 }
+/*works*/
 
 td,
 th {
     padding: 0;
+    border: 1px solid #ddd;
+    padding: 8px;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
@@ -1402,13 +1407,15 @@ html {
 }
 
 body {
+    margin-top: 8%;
     font-family: "Calisto MT", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 20px;
     line-height: 1.42857143;
     color: #333;
     background-color: white;
-    padding-top: 100px;
+    
 }
+
 
 input,
 button,
@@ -1439,7 +1446,8 @@ figure {
     margin: 0;
 }
 
-img {
+
+{
     vertical-align: middle;
 }
 
@@ -2876,7 +2884,16 @@ pre {
 
 table {
     background-color: transparent;
+    border-collapse: collapse;
+    padding-bottom: 10%;
+    font-family: Consolas;
+    text-align: center;
+    border: 4px solid black;
+  
+
 }
+
+
 
 caption {
     padding-top: 8px;
@@ -2886,7 +2903,9 @@ caption {
 }
 
 th {
-    text-align: left;
+    text-align: center;
+    background-color: #990000;
+    color: white;
 }
 
 .table {
@@ -2910,6 +2929,7 @@ th {
     .table > thead > tr > th {
         vertical-align: bottom;
         border-bottom: 2px solid #ddd;
+
     }
 
     .table > caption + thead > tr:first-child > th,
@@ -2956,10 +2976,10 @@ th {
         border-bottom-width: 2px;
     }
 
-.table-striped > tbody > tr:nth-of-type(odd) {
+/*.table-striped > tbody > tr:nth-of-type(odd) {
     background-color: #f9f9f9;
 }
-
+    */
 .table-hover > tbody > tr:hover {
     background-color: #f5f5f5;
 }
@@ -2976,6 +2996,7 @@ table th[class*="col-"] {
     display: table-cell;
     float: none;
 }
+
 
 .table > thead > tr > td.active,
 .table > tbody > tr > td.active,
@@ -3096,6 +3117,7 @@ table th[class*="col-"] {
     min-height: .01%;
     overflow-x: auto;
 }
+    
 
 @media screen and (max-width: 767px) {
     .table-responsive {
@@ -3148,6 +3170,8 @@ table th[class*="col-"] {
                 border-bottom: 0;
             }
 }
+
+
 
 fieldset {
     min-width: 0;
@@ -3781,6 +3805,7 @@ select[multiple].input-lg {
     .btn.active.focus {
         outline: 5px auto -webkit-focus-ring-color;
         outline-offset: -2px;
+     
     }
 
     .btn:hover,
@@ -3881,19 +3906,21 @@ fieldset[disabled] a.btn {
 .btn-primary {
     color: white;
     background-color: #800000;
-    border-color: #2e6da4;
+    border-color: black;
+    font-family: Calibri;
+    
 }
 
     .btn-primary:focus,
     .btn-primary.focus {
         color: #fff;
-        background-color: #286090;
+        background-color: #4d0000;
         border-color: #122b40;
     }
 
     .btn-primary:hover {
         color: #fff;
-        background-color: #286090;
+        background-color: #4d0000;
         border-color: #204d74;
     }
 
@@ -3901,7 +3928,7 @@ fieldset[disabled] a.btn {
     .btn-primary.active,
     .open > .dropdown-toggle.btn-primary {
         color: #fff;
-        background-color: #286090;
+        background-color: #ff4d4d;
         border-color: #204d74;
     }
 
@@ -3915,7 +3942,7 @@ fieldset[disabled] a.btn {
         .btn-primary.active.focus,
         .open > .dropdown-toggle.btn-primary.focus {
             color: #fff;
-            background-color: #204d74;
+            background-color: #ff4d4d;
             border-color: #122b40;
         }
 
@@ -5137,6 +5164,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 
 /*works for drop down*/
 .navbar-collapse {
+
     padding-right: 15px;
     padding-left: 15px;
     padding-bottom: 15px;
@@ -5181,6 +5209,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
     max-height: 100%;
+    width: 100%;
+    height: 100%;
     background-color: #800000;
 }
 
@@ -5211,7 +5241,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 
 .navbar-static-top {
     z-index: 1000;
-    border-width: 0 0 1px;
+    border-width: 0 0 1 px;
+  
 }
 
 @media (min-width: 768px) {
@@ -5237,7 +5268,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 /*works*/
 .navbar-fixed-top {
     top: 0;
-    height: 100px;
+    height: 25%;
     border: 5px solid #e60000;
 }
 
@@ -5250,10 +5281,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
     font-family: 'Monotype Corsiva';
     float: left;
-    height: 55px;
-    padding: 15px 50px 15px 0px;
-    font-size: 50px;
-    line-height: 50px;
+    height: 60px;
+    padding: 10px 30px 10px 0px;
+    font-size: 60px;
+    line-height: 150%;
 }
 
     .navbar-brand:hover,
@@ -5635,6 +5666,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-inverse {
     background-color: #800000;
     border-color: black;
+
+
 }
 
     .navbar-inverse .navbar-brand {
@@ -5653,8 +5686,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
         font-family: 'Comic Sans MS';
         float: left;
         height: 50px;
-        padding: 15px 15px 30px 30px;
-        line-height: 50px;
+        padding-top: 45px;
         text-decoration: underline;
     }
 
@@ -6707,13 +6739,13 @@ button.list-group-item-danger {
         color: inherit;
     }
 
-.panel-footer {
+/*.panel-footer {
     padding: 10px 15px;
     background-color: #f5f5f5;
     border-top: 1px solid #ddd;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
-}
+}*/
 
 .panel > .list-group,
 .panel > .panel-collapse > .list-group {
