--- a/Humraaah/Humraaah/Views/Addresses/Create.cshtml
+++ b/Humraaah/Humraaah/Views/Addresses/Create.cshtml
@@ -46,6 +46,8 @@
     </div>
 }
 
-<div>
+<div style="position: absolute;
+  left: 100px;
+  top: 150px;">
     @Html.ActionLink("Back to List", "Index")
-</div>
+</divposition:>
