--- a/Humraaah/Humraaah/Views/Ambulances/Index.cshtml
+++ b/Humraaah/Humraaah/Views/Ambulances/Index.cshtml
@@ -6,8 +6,11 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
+<p style="position: relative;
+  left: 90%;
+  ">
+    
+    @Html.ActionLink("Add Vehicle", "Create")
 </p>
 <table class="table">
     <tr>
@@ -32,7 +35,10 @@
         <th>
             @Html.DisplayNameFor(model => model.aType.capacity)
         </th>
-        <th></th>
+        <th>
+
+        </th>
+        
     </tr>
 
 @foreach (var item in Model) {
